# enterprise-document-intelligence-rag

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requests.http
backend/app/: main.py
backend/app/api/: documents.py  health.py  queries.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/db/: connection.py
backend/app/rag/: ingestion.py  retrieval.py
backend/app/schemas/: chat.py  document.py
backend/app/services/: ollama_client.py
backend/tests/: conftest.py
backend/tests/test_api/: test_documents.py  test_health.py  test_queries.py
docs/: architecture.md  decisions.md  roadmap.md
frontend/: README.md
scripts/: init_db.py
