[project]
name = "enterprise-document-intelligence-rag"
version = "0.1.0"
description = "Enterprise RAG platform using FastAPI, LlamaIndex, PostgreSQL/pgvector, and GCP Cloud Run"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Web API
    "fastapi>=0.116,<0.117",
    "uvicorn[standard]>=0.35,<0.36",
    "python-multipart>=0.0.20,<0.1",
    # Configuration
    "python-dotenv>=1.1,<2.0",
    # PDF Processing
    "pymupdf>=1.26,<2.0",
    # Database
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.4,<0.5",
    # Embeddings
    "sentence-transformers>=5.1,<6.0",
    # Tokenization
    "tiktoken>=0.11,<1.0",
    # LlamaIndex Core
    "llama-index>=0.14,<0.15",
    "llama-index-core>=0.14,<0.15",
    # LlamaIndex Integrations
    "llama-index-vector-stores-postgres>=0.7,<0.8",
    "llama-index-llms-ollama>=0.8,<0.9",
    "llama-index-embeddings-huggingface>=0.6,<0.7",
    # Logging
    "python-json-logger>=3.3,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-asyncio>=1.1,<2.0",
    "httpx>=0.28,<0.29",
    "ruff>=0.12,<0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
index-strategy = "unsafe-best-match"